--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dahmaenaissi/bioshock",
+  "name": "bioshock",
   "version": "1.0.0",
   "description": "Frontend workflow",
   "author": {
