--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "bootstrap": "^3.3.6",
-    "gsap": "^1.19.1"
+    "gsap": "^1.19.1",
+    "ScrollMagic" : "2.0.5"
   }
 }
